--- a/docs/blog/posts/_metadata.yml
+++ b/docs/blog/posts/_metadata.yml
@@ -1,5 +1,5 @@
-title-block-banner: "#EDF3F9"
-title-block-banner-color: body
+title-block-banner: "#373A3C"
+title-block-banner-color: white
 toc-location: left
 include-after-body:
   - ../signup.html
