--- a/docs/blog/posts/_metadata.yml
+++ b/docs/blog/posts/_metadata.yml
@@ -1,3 +1,8 @@
+comments:
+  giscus:
+    repo: statisticsplaybook/my-quarto-website
+    category: Comments
+    lang: ko
 title-block-banner: "#373A3C"
 title-block-banner-color: white
 toc-location: left
