comments system theme

--- a/docs/rstat101/_metadata.yml
+++ b/docs/rstat101/_metadata.yml
@@ -3,5 +3,6 @@ comments:
     repo: statisticsplaybook/my-quarto-website
     category: Comments
     lang: ko
+    theme: dark
 sidebar: rstat101
 search: false
