--- a/docs/blog/posts/_metadata.yml
+++ b/docs/blog/posts/_metadata.yml
@@ -2,7 +2,7 @@ comments:
   giscus:
     repo: statisticsplaybook/my-quarto-website
     category: Comments
-    lang: ko
+    language: ko
 title-block-banner: "#373A3C"
 title-block-banner-color: white
 toc-location: left
